--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body class="page">
     <main class="game">
       <section class="game__field field">
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
+        <div class="field__cell field__cell--x"></div>
+        <div class="field__cell field__cell--x field__cell--selected"></div>
+        <div class="field__cell field__cell--o"></div>
         <div class="field__cell"></div>
         <div class="field__cell"></div>
         <div class="field__cell"></div>
