--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body class="page">
     <main class="game">
       <section class="game__field field">
-        <div class="field__cell field__cell--x"></div>
-        <div class="field__cell field__cell--x field__cell--selected"></div>
-        <div class="field__cell field__cell--o"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
-        <div class="field__cell"></div>
+        <div class="field__cell" data-id="1"></div>
+        <div class="field__cell" data-id="2"></div>
+        <div class="field__cell" data-id="3"></div>
+        <div class="field__cell" data-id="4"></div>
+        <div class="field__cell" data-id="5"></div>
+        <div class="field__cell" data-id="6"></div>
+        <div class="field__cell" data-id="7"></div>
+        <div class="field__cell" data-id="8"></div>
+        <div class="field__cell" data-id="9"></div>
       </section>
       <p class="game__score button">Result</p>
       <p class="game__status button">Tic Tac Toe</p>
