feat: adds restart button

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <div class="field__cell" data-id="8"></div>
         <div class="field__cell" data-id="9"></div>
       </section>
-      <p class="game__score button">Result</p>
-      <p class="game__status button">Tic Tac Toe</p>
+      <p class="game__result button">Result</p>
+      <p class="game__name button">Tic Tac Toe</p>
+      <button class="game__restart button button--restart hide">Restart</button>
     </main>
     <script type="module" src="./src/index.js"></script>
   </body>
